Move js, css into own olders, create old & testing components, renaming

--- a/2Q1S Poster/beamerthemeconfposter.sty
+++ b/2Q1S Poster/beamerthemeconfposter.sty
@@ -46,7 +46,7 @@
 \setbeamercolor{cboxr}{fg=black,bg=red}
 
 % set colors for itemize/enumerate
-\setbeamercolor{item}{fg=ngreen}
+\setbeamercolor{item}{fg=lred}
 \setbeamercolor{item projected}{fg=white,bg=ngreen}
 
 % set colors for blocks
@@ -185,4 +185,4 @@
   \end{beamercolorbox}
   \end{beamercolorbox}
   \vskip\smallskipamount
-} 
+}
