--- a/2Q1S Poster/CoolPoster.tex
+++ b/2Q1S Poster/CoolPoster.tex
@@ -11,7 +11,7 @@
 \usepackage{pdfpages}                    % Go to this file, mypostersettings.tex
                                               % and edit your blocks: the main pieces of your poster!
 \title{Visualizing and Designing Multi Agent Search Algorithms}
-\author{David Bushta, Chris Till}
+\author{David Bushta, Christopher Till}
 \institute{Rutgers University, Camden}
 \toplogo{4in}{rutgerslogo.png}
 \extrainfo{\includegraphics[height=4in, width=7in]{mypics/rutgers.jpeg}} % If something here they type: \extrainfo{\ }
@@ -25,13 +25,14 @@
 \newSingle{Opening}{                             % This creates a single column with
            \BlockIntroduction      \vskip2ex     % A block   on the top
            \BlockDefinitions       \vskip2ex
+           \vspace{0.75in}
            \AlertMainProblem       \vskip2ex     % An Alert  underneath
            }
 %------------------------------------------------------------------------------------------
 \newSingle{Description}{                             % This creates a single column with
            \BlockDescription                         % Only one block
            }
-\newSingle{DescriptionDos}
+\newSingle{DescriptionDos}{
            \BlockDescriptionDos
            }
 %------------------------------------------------------------------------------------------
@@ -40,9 +41,9 @@
            }
 %------------------------------------------------------------------------------------------
 \newSingle{Closing}{                          % This creates a single column with
-           \BlockConclusions     \vskip2ex    % A block on the top
+           \BlockConclusions        % A block on the top
            \SingleWork           \vskip2ex
-           \BlockAcknowledgements      \vskip2ex    % A block underneath
+           \BlockAcknowledgements      \vskip0.5ex    % A block underneath
            \BlockBibliography    \vskip2ex    % A block underneath
            }
 %------------------------------------------------------------------------------------------
@@ -50,11 +51,11 @@
 %---------------------------------------------% USE THE ABOVE TO CREATE THE FOLLOWING -----
 \newTwin{DescWork}{                           % This creates a Twin Column with
            \SingleDescription                 % A previous single column on the left
-           \SingleDescriptionDos                       % A previous single column on the right
+           \SingleDescriptionDos
            }
 %-----------------------------------------------% USE THE ABOVE TO CREATE THE FOLLOWING -----
 \newMarried{MainTopic}{                         % This creates a column (twice in size) with
-           \AlertMainTopic \vspace{-.35in}      % An long alert block (twice in size)
+           %\AlertMainTopic \vspace{-.35in}      % An long alert block (twice in size)
            \TwinDescWork   \vskip2.5ex          % A previous Twin Column  underneath
            \AlertConjectures                    % An long alert block at the bottom
            }
